<resources>
    <string name="app_name">DiscogsClient</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search_hint">Search songs and artists</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="market">Market</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="headline">Bad New For Music Industry!!!</string>
    <string name="headline2">Smash Mouth release All Star Director Cut</string>
    <string name="a" translatable="false">A</string>
    <string name="b" translatable="false">B</string>
    <string name="c" translatable="false">C</string>
    <string name="lemon">Lemon</string>
    <string name="get_started">Get Started</string>
    <string name="authorize">Check Authorize</string>
    <string name="done">Done</string>
    <string name="logo">Logo</string>
    <string name="get_started_desc">Discover music on Discogs, the largest online music database. Buy and sell music with collectors in the Marketplace.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Sign in + Sign up -->
    <string name="verification_code">Verification code</string>
    <string name="code_hint">e.g. abcdefghi</string>
    <string name="check">Here we go!</string>
    <string name="text1">Register Using Facebook</string>
    <string name="text2">Register Using Google</string>
    <string name="text3">We do not post anything to Facebook or Google without your permission</string>
    <string name="text4">OR</string>
    <string name="text5">Username</string>
    <string name="text6">"Email "</string>
    <string name="text7">Password</string>
    <string name="text8">Confirm Password</string>
    <string name="text9">I accept the Privacy Policy and I agree to the Terms of Service, including minimum and age requirements</string>
    <string name="text10">Create Account</string>
    <string name="text11">Login to Discogs</string>
    <string name="text12">Login</string>
    <string name="text13">Facebook Login</string>
    <string name="text14">Google Login</string>
    <string name="text15">Sign In</string>
    <string name="text16">Sign Up</string>
    <string name="guest_login">Guest Login</string>

    <!-- Master Info Activity  -->
    <string name="bio">Bio:</string>
    <string name="cd">CD:</string>
    <string name="year">Year:</string>
    <string name="artist">Artist:</string>
    <string name="genre">Genre:</string>
    <string name="style">Style:</string>
    <string name="more_by">More by this artist</string>
    <string name="view_all">View all</string>
    <string name="total_length">Total length</string>
    <string name="track_list">Tracklist</string>
    <string name="show_all1">Show all 12 versions</string>
    <string name="show_all0">View all versions</string>

    <!-- Profile -->
    <string name="val">Collection Value</string>
    <string name="minimum">$0</string>
    <string name="median">$0</string>
    <string name="maximum">$0</string>
    <string name="max">Maximum</string>
    <string name="min">Minimum</string>
    <string name="med">Median</string>
    <string name="lists">Lists</string>
    <string name="purchases">Purchases</string>
    <string name="orders">Orders</string>
    <string name="contributions">Contributions</string>


    <!-- Preference Header -->
    <string name="profile_settings_header">Profile settings</string>
    <string name="legal_information_header">Legal information</string>
    <string name="dark_mode">Dark mode</string>

    <!-- Profile Settings Preferences -->
    <string name="account_settings">Account settings</string>
    <string name="search_history">Search history</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="privacy">Privacy</string>
    <string name="buyer_settings">Buyer settings</string>
    <string name="seller_settings">Seller settings</string>

    <!-- Account Settings Preferences -->
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="currency">Currency</string>
    <string name="buying_ship_address">Buying shipping address</string>
    <string name="notification">Notification</string>

    <!-- Buying Shipping Address -->
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="city_town">City/Town</string>
    <string name="country">Country</string>
    <string name="region_state">Region/State</string>
    <string name="postal_code">Postal code</string>
    <string name="phone">Contact phone number</string>
    <string name="paypal">Paypal email address</string>

    <!-- Legal Information Preferences -->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_of_service">Term of Service</string>

    <!-- Misc. -->
    <string name="offer_i_made">Offer I made</string>
    <string name="detailed_wishlist">Detailed wishlist</string>
    <string name="dark_mode_off">Dark mode is disable</string>
    <string name="dark_mode_on">Dark mode is enable</string>
    <string name="profile_settings_summary">Change general profile settings</string>
    <string name="pp_tos_summary">Privacy Policy and Term Of Service</string>
    <string name="account_settings_summary">Change settings related to your account</string>
    <string name="search_history_summary">View your search history</string>
    <string name="recently_viewed_summary">View your most recently viewed items</string>
    <string name="buyer_settings_summary">You must fill in these fields before you can purchase items for sale.</string>
    <string name="seller_settings_summary">You must fill in these fields before you can post items for sale.</string>
    <string name="change_email">Edit email</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="description">Description</string>
    <string name="sign_out">Sign Out</string>

    <!-- Buy Music -->
    <string name="cart_text_view_1">Shop for Vinyl, CDs, and more in the Discogs Marketplace.</string>
    <string name="cart_text_view_2">Your cart is empty</string>
    <string name="cart_text_view_3">1. Tap the Search icon to search for a Release title, Artist name, Label name, or other identifying release details.</string>
    <string name="cart_text_view_4">2. Narrow down to the Release version you want to buy.</string>
    <string name="cart_text_view_5">3. Narrow down to the a specific sales listing.</string>
    <string name="cart_text_view_6">You have items in your wishlist for sale.</string>
    <string name="dw_text_view_1">Could not find any marketplace listings from your wishlist.</string>
    <string name="purch_text_view_1">There are no purchase items.</string>
    <string name="oim_text_view_1">You have no offer with the status Pending.</string>
    <string name="music_sell">Sell music</string>
    <string name="music_buy">Buy music</string>

    <!-- Sell Music -->
    <string name="offers">Offers</string>
    <string name="inventory">Inventory</string>
    <string name="order_text_view_1">There are no order items.</string>
    <string name="offer_text_view_1">You have no offers with the status Pending.</string>
    <string name="inven_text_view_1">You have no items in your inventory with status For Sale,</string>
    <string name="wantlist">Wantlist</string>

    <!-- CardView row item -->
    <string name="user">User</string>
    <string name="title">Everyday Life</string>
    <string name="artist_title">Dave Grohl</string>
    <string name="artist_status">Active member</string>
    <string name="label_title">Parlophone</string>
    <string name="label_status1">Sublabel</string>
    <string name="label_status2">Parent label</string>
    <string name="master">Master release</string>
    <string name="click_show_all">Click to show all versions</string>
    <string name="formats">Formats: 2xVinyl, LP, Album</string>
    <string name="card_country">Europe (2019)</string>
    <string name="label">Labels: Parlophone + 3 more</string>
    <string name="catno">Cat# WPCR-18299, DBSOCD50, 019029540...</string>
    <string name="released">Released 22 Nov 2019 Europe</string>
    <string name="artist_profile">Coldplay is an English rock band from London, England. They\'\ve been a band since January 16, 1998 when they lost a demotap...</string>
    <string name="label_profile">Label Code: LC 0299 Please note, many Parlophone issues also carry an EMI logo. This is not a label and EMI should not be add...</string>
    <string name="no_item">Could not find any items</string>
    <string name="seller_rating">Seller rating</string>
    <string name="buyer_rating">Buyer rating</string>

    <!-- Explore -->
    <string name="explore_genre">Explore Genres</string>
    <string name="loading">Loading......</string>
    <string name="collection">Collection</string>
    <string name="add_another_collection">+ Add another to Collection</string>
    <string name="remove_wantlist">- Remove from Wantlist </string>
    <string name="collection_want">Add to Collection/Wantlist</string>

    <!-- Wantlist -->
    <string name="catalog">Catalog Your Wantlist</string>
    <string name="tap_search">Tap the search icon to get started.</string>
    <string name="search_for">Search for the release title, artist name.</string>
    <string name="search_for2">Label name, or other identifying details.</string>
    <string name="search_for3">Find the version you own, tap the eye icon and then \'\Add to wishlist\'\.</string>

</resources>
