<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:iconSpaceReserved="false"
        app:key="full_name"
        app:title="@string/full_name"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:key="address"
        app:title="@string/address"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:key="city_town"
        app:title="@string/city_town"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:key="country"
        app:title="@string/country"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:key="region_state"
        app:title="@string/region_state"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:key="postal_code"
        app:title="@string/postal_code"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:key="phone"
        app:title="@string/phone"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:key="paypal"
        app:title="@string/paypal"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
