<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:iconSpaceReserved="false"
        app:key="email"
        app:title="@string/change_email"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:iconSpaceReserved="false"
        app:key="name"
        app:title="@string/name"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:iconSpaceReserved="false"
        app:key="location"
        app:title="@string/location"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:iconSpaceReserved="false"
        app:key="currency"
        app:title="@string/currency"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:iconSpaceReserved="false"
        app:key="description"
        app:title="@string/description"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:fragment="com.naughtybitch.discogsclient.SettingsActivity$BuyingShippingAddressFragment"
        app:iconSpaceReserved="false"
        app:key="buy_ship_address"
        app:title="@string/buying_ship_address" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="notification"
        app:title="@string/notification" />

</PreferenceScreen>
