<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.naughtybitch.discogsclient.SettingsActivity$AccountSettingsFragment"
        app:iconSpaceReserved="false"
        app:key="account_settings"
        app:title="@string/account_settings" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="search_history"
        app:title="@string/search_history" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="recently_viewed"
        app:title="@string/recently_viewed" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="privacy"
        app:title="@string/privacy" />

    <Preference
        app:fragment="com.naughtybitch.discogsclient.SettingsActivity$BuyerSettingsFragment"
        app:iconSpaceReserved="false"
        app:key="buy_ship_address"
        app:title="@string/buyer_settings" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="notification"
        app:title="@string/seller_settings" />

</PreferenceScreen>
