<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings"
        app:iconSpaceReserved="false" />

    <Preference
        app:fragment="com.naughtybitch.discogsclient.settings.SettingsActivity$ProfileSettingsFragment"
        app:iconSpaceReserved="false"
        app:key="profile_settings_header"
        app:summary="@string/profile_settings_summary"
        app:title="@string/profile_settings_header" />

    <Preference
        app:allowDividerAbove="true"
        app:fragment="com.naughtybitch.discogsclient.settings.SettingsActivity$LegalInformationFragment"
        app:iconSpaceReserved="false"
        app:key="legal_information_header"
        app:summary="@string/pp_tos_summary"
        app:title="@string/legal_information_header" />

</PreferenceScreen>
