<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <Button
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/blue"
        android:text="@string/text1"
        android:textColor="@color/white"
        android:textSize="15dp" />


    <Button
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:background="@color/white"
        android:text="@string/text2"
        android:textColor="@color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text3"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text5"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text6"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text7"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text8"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text9" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        android:text="@string/text10"
        android:textColor="@color/white" />


</LinearLayout>